固有値と固有ベクトル

--- a/note/cp3/linearAlgebra.ipynb
+++ b/note/cp3/linearAlgebra.ipynb
@@ -393,6 +393,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.1.13 固有値と固有ベクトルの性質"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 性質1  行列$\\boldsymbol{A}$が対称行列(転置しても変化しない行列)の場合、固有ベクトルは互いに正規直行し、固有ベクトルを列に持つ行列$\\boldsymbol{V}$は直行行列になる\n",
+    "- 性質2  固有値の和は行列の対角成分の和と一致する\n",
+    "- 性質3  固有値の席は行列式と一致する\n",
+    "- 性質4  直行行列$\\boldsymbol{V}$の逆行列$\\boldsymbol{V}^{-1}$は転置行列$\\boldsymbol{V}^{T}$と一致する"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### vectorMatrix8.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "行列Aの固有値：\n",
+      "[4. 2.]\n",
+      "\n",
+      "行列Aの固有ベクトル：\n",
+      "[[ 0.70710678 -0.70710678]\n",
+      " [ 0.70710678  0.70710678]]\n",
+      "\n",
+      "固有ベクトルの内積：\n",
+      "[[0.]]\n",
+      "\n",
+      "固有値の和：6.0\n",
+      "\n",
+      "行列Aのトレース（対角成分の和）：6\n",
+      "\n",
+      "固有値の積：8.0\n",
+      "\n",
+      "行列Aの行列式：8.0\n",
+      "\n",
+      "行列Vの逆行列：[[ 0.70710678  0.70710678]\n",
+      " [-0.70710678  0.70710678]]\n",
+      "\n",
+      "行列Vの転置：[[ 0.70710678  0.70710678]\n",
+      " [-0.70710678  0.70710678]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# 行列の定義\n",
+    "A = np.array([ [3,1], [1,3]])\n",
+    "\n",
+    "# 固有値問題\n",
+    "L, V = np.linalg.eig(A)\n",
+    "\n",
+    "# 標準出力\n",
+    "print(f\"行列Aの固有値：\\n{L}\\n\")\n",
+    "print(f\"行列Aの固有ベクトル：\\n{V}\\n\")\n",
+    "print(f\"固有ベクトルの内積：\\n{np.matmul(V[:,[0]].T, V[:,[1]])}\\n\")\n",
+    "print(f\"固有値の和：{np.sum(L)}\\n\")\n",
+    "print(f\"行列Aのトレース（対角成分の和）：{np.sum(np.diag(A))}\\n\")\n",
+    "print(f\"固有値の積：{np.prod(L)}\\n\")\n",
+    "print(f\"行列Aの行列式：{np.linalg.det(A):.1f}\\n\")\n",
+    "print(f\"行列Vの逆行列：{np.linalg.inv(V)}\\n\")\n",
+    "print(f\"行列Vの転置：{V.T}\\n\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
