固有値分解

--- a/note/cp3/linearAlgebra.ipynb
+++ b/note/cp3/linearAlgebra.ipynb
@@ -474,6 +474,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3.1.14 固有値分解"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "D×Dの正方行列$\\boldsymbol{A}$が固有値$\\lambda$、固有ベクトル$\\boldsymbol{v}$を持つとき、固有値と固有ベクトルの席に分解できる。\n",
+    "$$\n",
+    "A=V\\Lambda V^{-1}\n",
+    "$$\n",
+    "ここで、行列$\\boldsymbol{V}$は固有ベクトルを列に並べたD×Dの行列、行列$\\boldsymbol{\\Lambda}$は固有値を対角成分に並べたD×Dの行列\n",
+    "$$\n",
+    "\\Lambda = \n",
+    "\\begin{pmatrix}\n",
+    "\\lambda_1 & 0 & \\cdots & 0 \\\\\n",
+    "0 & \\lambda_1 & \\cdots & 0 \\\\\n",
+    "\\vdots & \\vdots & \\vdots & \\vdots \\\\\n",
+    "0 & 0 & \\cdots & \\lambda_D\n",
+    "\\end{pmatrix}\n",
+    "= diag(\\lambda_1, \\lambda_2, \\cdots, \\lambda_D)\n",
+    "$$\n",
+    "ここで行列$\\boldsymbol{A}$が対称行列の場合、固有ベクトルの性質から$\\boldsymbol{V}$は直行行列となり、\n",
+    "$\\boldsymbol{V}^{-1} = \\boldsymbol{V}^{T}$となり、行列$\\boldsymbol{A}$を固有値と固有ベクトルの積和に分解できる。\n",
+    "$$\n",
+    "A = V \\Lambda V^{T}\n",
+    "= \\lambda_1 v_1 v_1^{T} + \\lambda_2 v_2 v_2^{T} + \\cdots + \\lambda_D v_D v_D^{T}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
